--- a/src/styles/flip-clock.css
+++ b/src/styles/flip-clock.css
@@ -26,7 +26,7 @@
   line-height: 1.52em;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   border-radius: 10px 10px 0 0;
-  background: #DC143C;
+  background: #dc143c;
   box-shadow: inset 0 5px 20px rgba(0, 0, 0, 0.3);
 }
 
@@ -38,7 +38,7 @@
   border-top: 1px solid rgba(0, 0, 0, 0.5);
   border-radius: 0 0 10px 10px;
   transition: color 100ms, background-color 100ms;
-  background: #8B0000;
+  background: #8b0000;
   box-shadow: inset 0 -5px 20px rgba(0, 0, 0, 0.3);
 }
 
@@ -56,7 +56,8 @@
 
 .primary:after {
   opacity: 0;
-  transform: translateX(0) translateY(-0.28em) translateZ(0.35em) rotateX(91deg) rotateY(0deg) rotateZ(0deg);
+  transform: translateX(0) translateY(-0.28em) translateZ(0.35em) rotateX(91deg)
+    rotateY(0deg) rotateZ(0deg);
 }
 
 .primary {
@@ -69,11 +70,12 @@
 
 @keyframes animate-top {
   0% {
-    background: #DC143C;
+    background: #dc143c;
   }
   100% {
     color: #474747;
-    transform: translateX(0px) translateY(0.35em) translateZ(5px) rotateX(-90deg) rotateY(0deg) rotateZ(0deg);
+    transform: translateX(0px) translateY(0.35em) translateZ(5px)
+      rotateX(-90deg) rotateY(0deg) rotateZ(0deg);
   }
 }
 
@@ -83,58 +85,139 @@
     opacity: 1;
   }
   100% {
-    transform: translateX(0) translateY(0) translateZ(0) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    transform: translateX(0) translateY(0) translateZ(0) rotateX(0deg)
+      rotateY(0deg) rotateZ(0deg);
     opacity: 1;
   }
 }
 
 /* Contenido de números para cada dígito */
-[data-number="0"] span.primary:before { content: "0"; }
-[data-number="0"] span.secondary:after { content: "0"; }
-[data-number="0"] span.secondary:before { content: attr(title); }
-[data-number="0"] span.primary:after { content: attr(title); }
+[data-number="0"] span.primary:before {
+  content: "0";
+}
+[data-number="0"] span.secondary:after {
+  content: "0";
+}
+[data-number="0"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="0"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="1"] span.primary:before { content: "1"; }
-[data-number="1"] span.secondary:after { content: "1"; }
-[data-number="1"] span.secondary:before { content: attr(title); }
-[data-number="1"] span.primary:after { content: attr(title); }
+[data-number="1"] span.primary:before {
+  content: "1";
+}
+[data-number="1"] span.secondary:after {
+  content: "1";
+}
+[data-number="1"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="1"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="2"] span.primary:before { content: "2"; }
-[data-number="2"] span.secondary:after { content: "2"; }
-[data-number="2"] span.secondary:before { content: attr(title); }
-[data-number="2"] span.primary:after { content: attr(title); }
+[data-number="2"] span.primary:before {
+  content: "2";
+}
+[data-number="2"] span.secondary:after {
+  content: "2";
+}
+[data-number="2"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="2"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="3"] span.primary:before { content: "3"; }
-[data-number="3"] span.secondary:after { content: "3"; }
-[data-number="3"] span.secondary:before { content: attr(title); }
-[data-number="3"] span.primary:after { content: attr(title); }
+[data-number="3"] span.primary:before {
+  content: "3";
+}
+[data-number="3"] span.secondary:after {
+  content: "3";
+}
+[data-number="3"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="3"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="4"] span.primary:before { content: "4"; }
-[data-number="4"] span.secondary:after { content: "4"; }
-[data-number="4"] span.secondary:before { content: attr(title); }
-[data-number="4"] span.primary:after { content: attr(title); }
+[data-number="4"] span.primary:before {
+  content: "4";
+}
+[data-number="4"] span.secondary:after {
+  content: "4";
+}
+[data-number="4"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="4"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="5"] span.primary:before { content: "5"; }
-[data-number="5"] span.secondary:after { content: "5"; }
-[data-number="5"] span.secondary:before { content: attr(title); }
-[data-number="5"] span.primary:after { content: attr(title); }
+[data-number="5"] span.primary:before {
+  content: "5";
+}
+[data-number="5"] span.secondary:after {
+  content: "5";
+}
+[data-number="5"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="5"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="6"] span.primary:before { content: "6"; }
-[data-number="6"] span.secondary:after { content: "6"; }
-[data-number="6"] span.secondary:before { content: attr(title); }
-[data-number="6"] span.primary:after { content: attr(title); }
+[data-number="6"] span.primary:before {
+  content: "6";
+}
+[data-number="6"] span.secondary:after {
+  content: "6";
+}
+[data-number="6"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="6"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="7"] span.primary:before { content: "7"; }
-[data-number="7"] span.secondary:after { content: "7"; }
-[data-number="7"] span.secondary:before { content: attr(title); }
-[data-number="7"] span.primary:after { content: attr(title); }
+[data-number="7"] span.primary:before {
+  content: "7";
+}
+[data-number="7"] span.secondary:after {
+  content: "7";
+}
+[data-number="7"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="7"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="8"] span.primary:before { content: "8"; }
-[data-number="8"] span.secondary:after { content: "8"; }
-[data-number="8"] span.secondary:before { content: attr(title); }
-[data-number="8"] span.primary:after { content: attr(title); }
+[data-number="8"] span.primary:before {
+  content: "8";
+}
+[data-number="8"] span.secondary:after {
+  content: "8";
+}
+[data-number="8"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="8"] span.primary:after {
+  content: attr(title);
+}
 
-[data-number="9"] span.primary:before { content: "9"; }
-[data-number="9"] span.secondary:after { content: "9"; }
-[data-number="9"] span.secondary:before { content: attr(title); }
-[data-number="9"] span.primary:after { content: attr(title); }
+[data-number="9"] span.primary:before {
+  content: "9";
+}
+[data-number="9"] span.secondary:after {
+  content: "9";
+}
+[data-number="9"] span.secondary:before {
+  content: attr(title);
+}
+[data-number="9"] span.primary:after {
+  content: attr(title);
+}
