--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -30,8 +30,7 @@
   text-align: right;
 }
 .refer {
-    color : white
-    
+  color: white;
 }
 
 @media (max-width: 768px) {
